--- a/ansible/initial_provision.yml
+++ b/ansible/initial_provision.yml
@@ -5,3 +5,9 @@
     - bootstrap
     - deploy-user
     - ssh
+
+- name: Add the database
+  hosts: fresh
+  become_user: root
+  roles:
+    - mysql
