Making models to match the schema. Handling user authentication. Getting the db/app container to talk.

--- a/app/.env
+++ b/app/.env
@@ -20,4 +20,4 @@ SOCKET_PATH=/var/run/mysqld/mysqld.sock
 LOG_DIR=logs
 LOG_LEVEL='debug'
 
-TOKEN_SECRET_KEY=secretkeyforjsonwebtoken
+TOKEN_SECRET_KEY=x(qqL$y*93b3R`V
