--- a/app/.env
+++ b/app/.env
@@ -7,7 +7,7 @@ NODE_ENV = development
 
 # Database
 DB_CLIENT=mysql
-DB_HOST=localhost
+DB_HOST=database
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=skunkwerkz
